<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <!-- Título Contact Us -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black" />

    <!-- Información de contacto -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_info"
        android:textSize="16sp"
        android:lineSpacingExtra="8sp"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"
        android:padding="16dp" />

    <!-- Botón Back -->
    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home"
        style="@style/Widget.AppCompat.Button" />

</LinearLayout>